fix(antd/next): fix the tooltip icon of formitem not align in vertical layout

--- a/packages/antd/src/form-item/style.less
+++ b/packages/antd/src/form-item/style.less
@@ -495,6 +495,7 @@
   color: #00000073;
   display: flex;
   align-items: center;
+  max-height: @height-base;
 
   span {
     display: inline-flex;
